--- a/css/main.css
+++ b/css/main.css
@@ -390,7 +390,7 @@ nav ul{
         flex: 1;
     }
     nav{
-        position: absolute;
+        position: fixed;
         height: 100vh;
         width: 100vw;
         background-color: rgb(34, 34, 34);
